# barebones-django

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml  railway.json
.github/: dependabot.yml
.github/workflows/: api-lint.yml  api-test.yml  api-update.yml
shells/: all.nix  dev.nix  lint.nix  render.nix  test.nix  update.nix
src/: manage.py
src/api/: __init__.py  apps.py  consts.py  exceptions.py  filters.py  paginators.py
src/api/admin/: __init__.py  delete.py  forms.py  user.py
src/api/migrations/: 0001_initial.py  __init__.py
src/api/models/: __init__.py  base.py  managers.py  querysets.py
src/api/models/users/: __init__.py  manager.py  roles.py  user.py
src/api/permissions/: __init__.py  admin.py  staff.py
src/api/serializers/: __init__.py  users.py
src/api/services/: __init__.py  utils.py
src/api/urls/: __init__.py  register.py  router.py  routes.py
src/api/views/: __init__.py  health.py  users.py  utils.py
src/core/: __init__.py  settings.py  urls.py  wsgi.py
src/tests/: __init__.py  conftest.py
src/tests/factories/: __init__.py  user.py
src/tests/unit/: test_permissions.py
